# packvm

./: Cargo.toml  README.md  default.nix
.github/workflows/: CI.yml
crates/aotc/: Cargo.toml
crates/aotc/src/: lib.rs
crates/aotc/templates/: macros.c  module.c  unpack_alias.c  unpack_enum.c  unpack_struct.c
crates/aotc/tests/: templates.rs
crates/macros/: Cargo.toml  lib.rs
crates/vm/: Cargo.toml
crates/vm/benches/: unpack_empty_blocks.rs
crates/vm/src/: isa.rs  lib.rs  pyo3.rs  runtime.rs
crates/vm/src/compiler/: antelope.rs  assembly.rs  mod.rs
crates/vm/src/isa_impl/: common.rs  mod.rs  pack.rs  unpack.rs
crates/vm/src/utils/: mod.rs  numbers.rs  varint.rs
crates/vm/tests/: all_tests.rs
crates/vm/tests/antelope/: compiler.rs  mod.rs  packing.rs  std_abi.json  test_abi.json  unpacking.rs
resources/antelope/: signed_block_abi.json
