[workspace]
resolver = "2"
members = [
    "crates/vm",
    "crates/macros",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.75"
authors = ["Guillermo Rodriguez"]
license = "AGPL-3"
homepage = "https://github.com/guilledk/packvm"
repository = "https://github.com/guilledk/packvm"
keywords = ["vm", "serialization"]
categories = ["encoding"]

[workspace.dependencies]
packvm-macros.path = "crates/macros"
antelope-client = { git = "https://github.com/openrepublic/antelope-rs.git", rev = "1f3fe8c45cf9674f45c612cf2358987a0d84d1b4" }
# antelope-client.path = "../antelope-rs/crates/antelope"


[profile.release]
opt-level = 3
lto = "fat"  # slowest link times
# lto = "thin"

codegen-units = 1
panic = "abort"  # remove unwinder, shrinks and speeds up binary
incremental = false  # ensure full optimisation passes

debug-assertions = false  # disable   debug_assert! & identical intrinsics
overflow-checks  = false  # wrap-around semantics like C

# make build scripts fast, but runtime deps hot
[profile.release.package."*"]
opt-level       = 3
codegen-units   = 1

[profile.release.build-override]  # build-scripts / proc-macros
opt-level = 0
codegen-units = 256