[package]
name = "aotc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cc = "1.2.22"
askama = "0.12.1"
packvm.workspace = true
pyo3-build-config = { version = "0.24.2", features = ["resolve-config"] }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
antelope-client.workspace = true
