[package]
name = "packvm"
description = "Virtual machine for encoding/decoding structures"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

readme = "../../README.md"
exclude = ["tests"]

[lib]
name = "packvm"

[dependencies]
thiserror = "1.0.57"
tailcall = "1.0.1"
antelope-client.workspace = true

[dev-dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
packvm-macros.workspace = true

[features]
debug_vm = []
