[package]
name = "packvm"
description = "Virtual machine for encoding/decoding structures"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

readme = "../../README.md"
exclude = ["tests"]

[lib]
name = "packvm"

[dependencies]
thiserror = "1.0.57"
antelope-client.workspace = true
bimap = "0.6.3"
pyo3 = { version = "0.23.5", optional = true}
sha2 = "0.10.9"
itertools = "0.14.0"

[dev-dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
packvm-macros.workspace = true
criterion = "0.5"
once_cell = "1.19"

[[bench]]
name    = "unpack_empty_blocks"          # benches/unpack_empty_blocks.rs
harness = false

[features]
debug = []
python = ["pyo3"]
